--- a/admin/views/app/dashboard/maincategory.html
+++ b/admin/views/app/dashboard/maincategory.html
@@ -1,60 +1,61 @@
 <div class="row">
-            <div class="col-md-6 d-flex align-items-stretch grid-margin">
-              <div class="row flex-grow">
-                <div class="col-12">
-                  <div class="card">
+    <div class="col-md-6 d-flex align-items-stretch grid-margin">
+        <div class="row flex-grow">
+            <div class="col-12">
+                <div class="card">
                     <div class="card-body">
-                      <h4 class="card-title">Main category</h4>
-                      
-                      <form class="forms-sample">
-                          <input type="text" ng-model="formdata.id" class="form-control">
-                        <div class="form-group">
-                          <label for="exampleInputEmail1">Main category Name </label>
-                          <input type="text" ng-model="formdata.cat_name" class="form-control" id="exampleInputEmail1" placeholder="Enter category Name">
-                        </div>
-                        <div class="form-group">
-                          <label for="exampleInputPassword1">Image</label>
-                          <input type="text" ng-model="formdata.img" class="form-control" id="exampleInputPassword1" placeholder="Upload Image">
-                        </div>
-                          <div class="form-group">
-                          <label for="exampleInputPassword1">Sorting</label>
-                          <input type="text" ng-model="formdata.sort" class="form-control">
-                        </div>
-                          
-                          
-                        <button type="button" ng-if="formdata.id <= 0" ng-click="addcatlist('add')" class="btn btn-success mr-2">Submit</button>
-                        <button type="button" ng-if="formdata.id" ng-click="addcatlist('edit')" class="btn btn-success mr-2">Update</button>
-                        <button class="btn btn-light">Cancel</button>
-                      </form>
+                        <h4 class="card-title">Main category</h4>
+
+                        <form class="forms-sample">
+                            <input type="text" ng-model="formdata.id" class="form-control">
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Main category Name </label>
+                                <input type="text" ng-model="formdata.cat_name" class="form-control" id="exampleInputEmail1" placeholder="Enter category Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Image</label>
+                                <input type="text" ng-model="formdata.img" class="form-control" id="exampleInputPassword1" placeholder="Upload Image">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Sorting</label>
+                                <input type="text" ng-model="formdata.sort" class="form-control">
+                            </div>
+
+
+                            <button type="button" ng-if="formdata.id <= 0" ng-click="addcatlist('add')" class="btn btn-success mr-2">Submit</button>
+                            <button type="button" ng-if="formdata.id" ng-click="addcatlist('edit')" class="btn btn-success mr-2">Update</button>
+                            <button class="btn btn-light">Cancel</button>
+                        </form>
                     </div>
-                  </div>
                 </div>
-                
-              </div>
             </div>
-            
-            
-          </div>
+
+        </div>
+    </div>
+
+
+</div>
 
 
 <div class="col-12">
     <table>
-    <tr>
-     <td>Id</td>
-    <td>Name</td>
-    <td>Image</td>
-    <td>Status</td>
-    <td></td>
-    <td></td>
-    </tr>
-  <tr ng-repeat="cat in categorylist ">
-    <td>{{ cat.id }}</td>
-    <td>{{ cat.cat_name }}</td>
-    <td>{{ cat.img }}</td>
-    <td><div ng-if ="cat.status >0 ">Active</div><div ng-if ="cat.status <= 0 ">In Active</div></td>
-    <td> <button type="button" ng-click="getcatlist('list', cat.id )" class="btn mr-2">Edit</button>    </td>
-    <td> <button type="button" ng-click="getcatlist('' )" class="btn mr-2">Disable</button></td>
-  </tr>
-</table>
+        <tr>
+            <td>Id</td>
+            <td>Name</td>
+            <td>Image</td>
+            <td>Status</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr ng-repeat="cat in categorylist">
+            <td>{{ cat.id}}</td>
+            <td>{{ cat.cat_name}}</td>
+            <td>{{ cat.img}}</td>
+            <td><div ng-if ="cat.status > 0">Active</div><div ng-if ="cat.status <= 0">In Active</div></td>
+            <td> <button type="button" ng-click="getcatlist('list', cat.id)" class="btn mr-2">Edit</button>    </td>
+            <td> <button type="button" ng-click="statusupdate(1, cat.id)" class="btn mr-2">Enable</button>
+                <button type="button" ng-click="statusupdate(0, cat.id)" class="btn mr-2">Disable</button></td>
+        </tr>
+    </table>
 </div>
 
